net/mlx4_en: Disable global flow control when PFC enabled (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16720,6 +16720,7 @@
 	patches.drivers/mlx4-0114-include-Convert-ethernet-mac-address-declarations-to.patch
 	patches.drivers/mlx4-0115-net-mlx4-Staticize-local-functions.patch
 	patches.drivers/mlx4-0116-net-mlx4_en-Coding-style-cleanup-in-mlx4_en_dcbnl_ie.patch
+	patches.drivers/mlx4-0117-net-mlx4_en-Disable-global-flow-control-when-PFC-ena.patch
 
 	########################################################
 	# Wireless Networking
