--- a/series.conf
+++ b/series.conf
@@ -16696,6 +16696,7 @@
 	patches.drivers/mlx4-0090-net-mlx4_en-Handle-unassigned-VF-MAC-address-correct.patch
 	patches.drivers/mlx4-0091-net-mlx4_core-Keep-VF-assigned-MAC-in-the-PF-admin-t.patch
 	patches.drivers/mlx4-0092-net-mlx_en-Timestamping-is-not-supported-in-slave-mo.patch
+	patches.drivers/mlx4-0093-treewide-Fix-typo-in-printk.patch
 
 	########################################################
 	# Wireless Networking
