--- a/series.conf
+++ b/series.conf
@@ -16794,6 +16794,7 @@
 	patches.drivers/mlx4-0188-net-IB-mlx-Bump-all-Mellanox-driver-versions.patch
 	patches.drivers/mlx4-0189-net-mlx4_en-mlx4_en_verify_params-can-be-static.patch
 	patches.drivers/mlx4-0190-mlx4-Call-dev_kfree_skby_any-instead-of-dev_kfree_sk.patch
+	patches.drivers/mlx4-0191-net-mlx4-Support-shutdown-interface.patch
 
 	########################################################
 	# Wireless Networking
