net/mlx4_en: IRQ affinity hint is not cleared on port down (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16845,6 +16845,7 @@
 	patches.drivers/mlx4-0239-net-mlx4_en-Do-not-count-LLC-SNAP-in-MTU-calculation.patch
 	patches.drivers/mlx4-0240-net-mlx4_en-Fix-mac_hash-database-inconsistency.patch
 	patches.drivers/mlx4-0241-net-mlx4_en-Don-t-use-irq_affinity_notifier-to-track.patch
+	patches.drivers/mlx4-0242-net-mlx4_en-IRQ-affinity-hint-is-not-cleared-on-port.patch
 
 	########################################################
 	# Wireless Networking
