net/mlx4_en: Reduce memory consumption on kdump kernel (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16856,6 +16856,7 @@
 	patches.drivers/mlx4-0250-net-mlx4_en-current_mac-isn-t-updated-in-port-up.patch
 	patches.drivers/mlx4-0251-net-mlx4_en-Disable-blueflame-using-ethtool-private-.patch
 	patches.drivers/mlx4-0252-net-mlx4_core-Use-low-memory-profile-on-kdump-kernel.patch
+	patches.drivers/mlx4-0253-net-mlx4_en-Reduce-memory-consumption-on-kdump-kerne.patch
 
 	########################################################
 	# Wireless Networking
