--- a/series.conf
+++ b/series.conf
@@ -16684,6 +16684,7 @@
 	patches.drivers/mlx4-0078-mlx4_en-fix-a-build-error-on-32bit-arches.patch
 	patches.drivers/mlx4-0079-mlx4_core-Reduce-warning-message-for-SRQ_LIMIT-event.patch
 	patches.drivers/mlx4-0080-IB-mlx4-Disable-VLAN-stripping-for-RAW-PACKET-QPs.patch
+	patches.drivers/mlx4-0081-IB-mlx4-Set-link-type-for-RAW-PACKET-QPs-in-the-QP-c.patch
 
 	########################################################
 	# Wireless Networking
