net/mlx4_core: Dynamic VST to VST vlan/qos changes (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16709,6 +16709,7 @@
 	patches.drivers/mlx4-0103-net-mlx4_core-Replace-sscanf-with-kstrtoint.patch
 	patches.drivers/mlx4-0104-net-mlx4_core-Add-warning-in-case-of-command-timeout.patch
 	patches.drivers/mlx4-0105-net-mlx4_core-Fail-device-init-if-num_vfs-is-negativ.patch
+	patches.drivers/mlx4-0106-net-mlx4_core-Dynamic-VST-to-VST-vlan-qos-changes.patch
 
 	########################################################
 	# Wireless Networking
