--- a/series.conf
+++ b/series.conf
@@ -16762,6 +16762,7 @@
 	patches.drivers/mlx4-0156-net-mlx4_core-Introduce-nic_info-new-flag-in-QUERY_F.patch
 	patches.drivers/mlx4-0157-net-mlx4_core-Expose-physical-port-id-as-PF-VF-capab.patch
 	patches.drivers/mlx4-0158-net-mlx4_en-Configure-the-XPS-queue-mapping-on-drive.patch
+	patches.drivers/mlx4-0159-net-mlx4_core-Set-CQE-EQE-size-to-64B-by-default.patch
 
 	########################################################
 	# Wireless Networking
