net/mlx4_core: Disallow releasing VF QPs which have steering rules (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16657,6 +16657,7 @@
 	patches.drivers/mlx4-0051-net-mlx4_core-Fix-wrong-order-of-flow-steering-resou.patch
 	patches.drivers/mlx4-0052-net-mlx4_en-Remove-ethtool-flow-steering-rules-befor.patch
 	patches.drivers/mlx4-0053-net-mlx4_core-Always-use-64-bit-resource-ID-when-doi.patch
+	patches.drivers/mlx4-0054-net-mlx4_core-Disallow-releasing-VF-QPs-which-have-s.patch
 
 	########################################################
 	# Wireless Networking
