net/mlx4_core: Keep only one driver entry release mlx4_priv (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16834,6 +16834,7 @@
 	patches.drivers/mlx4-0228-net-mlx4_core-Replace-pr_warning-with-pr_warn.patch
 	patches.drivers/mlx4-0229-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/mlx4-0230-net-mlx4_core-Fix-SRIOV-free-pool-management-when-en.patch
+	patches.drivers/mlx4-0231-net-mlx4_core-Keep-only-one-driver-entry-release-mlx.patch
 
 	########################################################
 	# Wireless Networking
