net/mlx4_en: Disable HW clock overflow check when no HW support (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16674,6 +16674,7 @@
 	patches.drivers/mlx4-0068-net-mlx4_en-Support-software-timestamping.patch
 	patches.drivers/mlx4-0069-net-mlx4_en-Add-a-service-task.patch
 	patches.drivers/mlx4-0070-net-mlx4_core-Disable-HW-timestamping-for-VFs.patch
+	patches.drivers/mlx4-0071-net-mlx4_en-Disable-HW-clock-overflow-check-when-no-.patch
 
 	########################################################
 	# Wireless Networking
