net/mlx4_en: Fix traffic loss under promiscuous mode (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16607,6 +16607,7 @@
 	patches.drivers/mlx4-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/mlx4-0002-net-mlx4_en-remove-redundant-code.patch
 	patches.drivers/mlx4-0003-net-mlx4_en-Issue-the-dump-eth-statistics-command-un.patch
+	patches.drivers/mlx4-0004-net-mlx4_en-Fix-traffic-loss-under-promiscuous-mode.patch
 
 	########################################################
 	# Wireless Networking
