--- a/series.conf
+++ b/series.conf
@@ -16818,6 +16818,7 @@
 	patches.drivers/mlx4-0212-mlx4_core-Fix-incorrect-FLAGS1-bitmap-test-in-mlx4_Q.patch
 	patches.drivers/mlx4-0213-IB-mlx4-SET_PORT-called-by-mlx4_ib_modify_port-shoul.patch
 	patches.drivers/mlx4-0214-mellanox-Logging-message-cleanups.patch
+	patches.drivers/mlx4-0215-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
