--- a/series.conf
+++ b/series.conf
@@ -16869,6 +16869,7 @@
 	patches.drivers/mlx4-0263-mlx4-Fix-mlx4-reg-unreg-mac-to-work-properly-with-0-.patch
 	patches.drivers/mlx4-0264-IB-mlx4-Avoid-accessing-netdevice-when-building-RoCE.patch
 	patches.drivers/mlx4-0265-IB-mlx4-Do-not-allow-APM-under-RoCE.patch
+	patches.drivers/mlx4-0266-net-mlx4_core-Allow-not-to-specify-probe_vf-in-SRIOV.patch
 
 	########################################################
 	# Wireless Networking
