--- a/series.conf
+++ b/series.conf
@@ -16659,6 +16659,7 @@
 	patches.drivers/mlx4-0053-net-mlx4_core-Always-use-64-bit-resource-ID-when-doi.patch
 	patches.drivers/mlx4-0054-net-mlx4_core-Disallow-releasing-VF-QPs-which-have-s.patch
 	patches.drivers/mlx4-0055-net-mlx4_en-Fix-setting-initial-MAC-address.patch
+	patches.drivers/mlx4-0056-mlx4-Remove-driver-specific-fdb-handlers.patch
 
 	########################################################
 	# Wireless Networking
