--- a/series.conf
+++ b/series.conf
@@ -16651,6 +16651,7 @@
 	patches.drivers/mlx4-0045-net-mlx4_core-Fix-endianness-bug-in-set_param_l.patch
 	patches.drivers/mlx4-0046-net-mlx4_en-Fix-race-when-setting-the-device-MAC-add.patch
 	patches.drivers/mlx4-0047-net-mlx4_en-Cleanup-MAC-resources-on-module-unload-o.patch
+	patches.drivers/mlx4-0048-net-mlx4_en-Disable-RFS-when-running-in-SRIOV-mode.patch
 
 	########################################################
 	# Wireless Networking
