net/mlx4_en: Remove selftest TX queues empty condition (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16751,6 +16751,7 @@
 	patches.drivers/mlx4-0145-treewide-Fix-typo-in-printk.patch
 	patches.drivers/mlx4-0146-IB-mlx4-Fix-endless-loop-in-resize-CQ.patch
 	patches.drivers/mlx4-0147-IB-mlx4-Fix-device-max-capabilities-check.patch
+	patches.drivers/mlx4-0148-net-mlx4_en-Remove-selftest-TX-queues-empty-conditio.patch
 
 	########################################################
 	# Wireless Networking
