mlx4_core: Move DMFS HW structs to common header file (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16685,6 +16685,7 @@
 	patches.drivers/mlx4-0079-mlx4_core-Reduce-warning-message-for-SRQ_LIMIT-event.patch
 	patches.drivers/mlx4-0080-IB-mlx4-Disable-VLAN-stripping-for-RAW-PACKET-QPs.patch
 	patches.drivers/mlx4-0081-IB-mlx4-Set-link-type-for-RAW-PACKET-QPs-in-the-QP-c.patch
+	patches.drivers/mlx4-0082-mlx4_core-Move-DMFS-HW-structs-to-common-header-file.patch
 
 	########################################################
 	# Wireless Networking
