net/mlx4_core: Disable HW timestamping for VFs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16673,6 +16673,7 @@
 	patches.drivers/mlx4-0067-net-mlx4_en-Add-HW-timestamping-TS-support.patch
 	patches.drivers/mlx4-0068-net-mlx4_en-Support-software-timestamping.patch
 	patches.drivers/mlx4-0069-net-mlx4_en-Add-a-service-task.patch
+	patches.drivers/mlx4-0070-net-mlx4_core-Disable-HW-timestamping-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
