net/mlx4_en: Configure the XPS queue mapping on driver load (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16761,6 +16761,7 @@
 	patches.drivers/mlx4-0155-net-mlx4_core-Rename-QUERY_FUNC_CAP-fields.patch
 	patches.drivers/mlx4-0156-net-mlx4_core-Introduce-nic_info-new-flag-in-QUERY_F.patch
 	patches.drivers/mlx4-0157-net-mlx4_core-Expose-physical-port-id-as-PF-VF-capab.patch
+	patches.drivers/mlx4-0158-net-mlx4_en-Configure-the-XPS-queue-mapping-on-drive.patch
 
 	########################################################
 	# Wireless Networking
