net/mlx4_core: clean up cq_res_start_move_to() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16773,6 +16773,7 @@
 	patches.drivers/mlx4-0167-net-mlx4_core-Warn-if-device-doesn-t-have-enough-PCI.patch
 	patches.drivers/mlx4-0168-mlx4_en-Select-PTP_1588_CLOCK.patch
 	patches.drivers/mlx4-0169-drivers-net-delete-non-required-instances-of-include.patch
+	patches.drivers/mlx4-0170-net-mlx4_core-clean-up-cq_res_start_move_to.patch
 
 	########################################################
 	# Wireless Networking
