--- a/series.conf
+++ b/series.conf
@@ -16786,6 +16786,7 @@
 	patches.drivers/mlx4-0180-net-mlx4_en-Verify-mlx4_en-module-parameters.patch
 	patches.drivers/mlx4-0181-net-mlx4_en-Pad-ethernet-packets-smaller-than-17-byt.patch
 	patches.drivers/mlx4-0182-net-mlx4_en-Move-queue-stopped-waked-counters-to-be-.patch
+	patches.drivers/mlx4-0183-net-mlx4-Replace-mlx4_en_mac_to_u64-with-mlx4_mac_to.patch
 
 	########################################################
 	# Wireless Networking
