--- a/series.conf
+++ b/series.conf
@@ -16765,6 +16765,7 @@
 	patches.drivers/mlx4-0159-net-mlx4_core-Set-CQE-EQE-size-to-64B-by-default.patch
 	patches.drivers/mlx4-0160-net-mlx4_en-Ignore-irrelevant-hypervisor-events.patch
 	patches.drivers/mlx4-0161-net-mlx4_en-Add-NAPI-support-for-transmit-side.patch
+	patches.drivers/mlx4-0162-net-mlx4_core-Check-port-number-for-validity-before-.patch
 
 	########################################################
 	# Wireless Networking
