--- a/series.conf
+++ b/series.conf
@@ -16896,6 +16896,7 @@
 	patches.drivers/mlx4-0290-net-mlx4_en-tx_info-ts_requested-was-not-cleared.patch
 	patches.drivers/mlx4-0291-net-mlx4_en-Enable-the-compiler-to-make-is_inline-in.patch
 	patches.drivers/mlx4-0292-net-mlx4_en-remove-NETDEV_TX_BUSY.patch
+	patches.drivers/mlx4-0293-net-add-netdev_txq_bql_-enqueue-complete-_prefetchw-.patch
 
 	########################################################
 	# Wireless Networking
