--- a/series.conf
+++ b/series.conf
@@ -16661,6 +16661,7 @@
 	patches.drivers/mlx4-0055-net-mlx4_en-Fix-setting-initial-MAC-address.patch
 	patches.drivers/mlx4-0056-mlx4-Remove-driver-specific-fdb-handlers.patch
 	patches.drivers/mlx4-0057-drivers-net-Remove-unnecessary-OOM-messages-after-ne.patch
+	patches.drivers/mlx4-0058-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 
 	########################################################
 	# Wireless Networking
