--- a/series.conf
+++ b/series.conf
@@ -16776,6 +16776,7 @@
 	patches.drivers/mlx4-0170-net-mlx4_core-clean-up-cq_res_start_move_to.patch
 	patches.drivers/mlx4-0171-net-mlx4_core-clean-up-srq_res_start_move_to.patch
 	patches.drivers/mlx4-0172-net-mlx4_core-Remove-unnecessary-validation-for-port.patch
+	patches.drivers/mlx4-0173-mlx4-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 
 	########################################################
 	# Wireless Networking
