--- a/series.conf
+++ b/series.conf
@@ -16865,6 +16865,7 @@
 	patches.drivers/mlx4-0259-net-mlx4-Use-the-correct-VSD-mask-in-UPDATE_QP.patch
 	patches.drivers/mlx4-0260-IB-mlx4-Disable-TSO-for-Connect-X-rev.-A0-HCAs.patch
 	patches.drivers/mlx4-0261-IB-mlx4-Fix-lockdep-splat-for-the-iboe-lock.patch
+	patches.drivers/mlx4-0262-IB-mlx4-Avoid-executing-gid-task-when-device-is-bein.patch
 
 	########################################################
 	# Wireless Networking
