net/mlx4: Correctly configure single ported VFs from the host (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16861,6 +16861,7 @@
 	patches.drivers/mlx4-0255-mlx4_core-Add-support-for-secure-host-and-SMP-firewa.patch
 	patches.drivers/mlx4-0256-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/mlx4-0257-net-mlx4_en-do-not-ignore-autoneg-in-mlx4_en_set_pau.patch
+	patches.drivers/mlx4-0258-net-mlx4-Correctly-configure-single-ported-VFs-from-.patch
 
 	########################################################
 	# Wireless Networking
