net/mlx4_core: Fix call to __mlx4_unregister_mac (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16731,6 +16731,7 @@
 	patches.drivers/mlx4-0125-net-mlx4-Fix-typo-move-similar-defs-to-same-location.patch
 	patches.drivers/mlx4-0126-net-mlx4-Unused-local-variable-in-mlx4_opreq_action.patch
 	patches.drivers/mlx4-0127-net-mlx4_core-Load-higher-level-modules-according-to.patch
+	patches.drivers/mlx4-0128-net-mlx4_core-Fix-call-to-__mlx4_unregister_mac.patch
 
 	########################################################
 	# Wireless Networking
