net/mlx4_en: Remove ethtool flow steering rules before releasing QPs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16655,6 +16655,7 @@
 	patches.drivers/mlx4-0049-mlx4-remove-leftover-idr_pre_get-call.patch
 	patches.drivers/mlx4-0050-net-mlx4_core-Fix-wrong-mask-applied-on-EQ-numbers-i.patch
 	patches.drivers/mlx4-0051-net-mlx4_core-Fix-wrong-order-of-flow-steering-resou.patch
+	patches.drivers/mlx4-0052-net-mlx4_en-Remove-ethtool-flow-steering-rules-befor.patch
 
 	########################################################
 	# Wireless Networking
