drivers:net: Remove unnecessary OOM messages after netdev_alloc_skb (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16660,6 +16660,7 @@
 	patches.drivers/mlx4-0054-net-mlx4_core-Disallow-releasing-VF-QPs-which-have-s.patch
 	patches.drivers/mlx4-0055-net-mlx4_en-Fix-setting-initial-MAC-address.patch
 	patches.drivers/mlx4-0056-mlx4-Remove-driver-specific-fdb-handlers.patch
+	patches.drivers/mlx4-0057-drivers-net-Remove-unnecessary-OOM-messages-after-ne.patch
 
 	########################################################
 	# Wireless Networking
