net/mlx4_core: Enforce irq affinity changes immediatly (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16821,6 +16821,7 @@
 	patches.drivers/mlx4-0215-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.fixes/radix-tree-introduce-bit-optimized-iterator.patch
 	patches.fixes/radix-tree-fix-contiguous-iterator.patch
+	patches.drivers/mlx4-0218-net-mlx4_core-Enforce-irq-affinity-changes-immediatl.patch
 
 	########################################################
 	# Wireless Networking
