--- a/series.conf
+++ b/series.conf
@@ -17140,6 +17140,7 @@
 	patches.drivers/bnx2x-0236-bnx2x-Be-more-forgiving-toward-SW-GRO.patch
 	patches.drivers/bnx2x-0237-bnx2x-Fix-timesync-endianity.patch
 	patches.drivers/bnx2x-0238-bnx2x-Fix-static-checker-warning-regarding-txdata_pt.patch
+	patches.drivers/bnx2x-0239-bnx2x-Fix-sparse-warnings.patch
 
 	########################################################
 	# Wireless Networking
