--- a/series.conf
+++ b/series.conf
@@ -17075,6 +17075,7 @@
 	patches.drivers/bnx2x-0171-bnx2x-add-VF-Multicast-filters-support.patch
 	patches.drivers/bnx2x-0172-bnx2x-Fix-build-with-SRIOV-disabled.patch
 	patches.drivers/bnx2x-0173-net-bnx2x-slight-optimization-of-addr-compare.patch
+	patches.drivers/bnx2x-0174-bnx2x-Fix-578xx-KR-1G-link.patch
 
 	########################################################
 	# Wireless Networking
