DMA-API: net: broadcom/bnx2x: replace dma_set_mask()+dma_set_coherent_mask() with new helper (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17030,6 +17030,7 @@
 	patches.drivers/bnx2x-0126-bnx2x-Fix-configuration-of-doorbell-block.patch
 	patches.drivers/bnx2x-0127-bnx2x-Use-pci_dev-pm_cap.patch
 	patches.drivers/bnx2x-0128-net-bnx2x-Staticize-local-symbols.patch
+	patches.drivers/bnx2x-0129-DMA-API-net-broadcom-bnx2x-replace-dma_set_mask-dma_.patch
 
 	########################################################
 	# Wireless Networking
