--- a/series.conf
+++ b/series.conf
@@ -17142,6 +17142,7 @@
 	patches.drivers/bnx2x-0238-bnx2x-Fix-static-checker-warning-regarding-txdata_pt.patch
 	patches.drivers/bnx2x-0239-bnx2x-Fix-sparse-warnings.patch
 	patches.drivers/bnx2x-0240-bnx2x-prevent-incorrect-byte-swap-in-BE.patch
+	patches.drivers/bnx2x-0241-bnx2x-Configure-device-endianity-on-driver-load-and-.patch
 
 	########################################################
 	# Wireless Networking
