bnx2x: Implement PCI shutdown (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16988,6 +16988,7 @@
 	patches.drivers/bnx2x-0084-bnx2x-Ack-unknown-VF-messages.patch
 	patches.drivers/bnx2x-0085-bnx2x-bnx2fc-Use-per-port-max-exchange-resources.patch
 	patches.drivers/bnx2x-0086-bnx2x-Count-number-of-possible-FCoE-interfaces.patch
+	patches.drivers/bnx2x-0087-bnx2x-Implement-PCI-shutdown.patch
 
 	########################################################
 	# Wireless Networking
