--- a/series.conf
+++ b/series.conf
@@ -17046,6 +17046,7 @@
 	patches.drivers/bnx2x-0142-bnx2x-Correct-VF-driver-info.patch
 	patches.drivers/bnx2x-0143-bnx2x-Don-t-disable-enable-SR-IOV-when-loading.patch
 	patches.drivers/bnx2x-0144-bnx2x-Change-function-prototype.patch
+	patches.drivers/bnx2x-0145-bnx2x-Add-support-for-EXTPHY2-LED-mode.patch
 
 	########################################################
 	# Wireless Networking
