bnx2x: Revise prints (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16992,6 +16992,7 @@
 	patches.drivers/bnx2x-0088-bnx2x-Semantic-change-of-empty-lines.patch
 	patches.drivers/bnx2x-0089-bnx2x-Revise-comments-and-alignment.patch
 	patches.drivers/bnx2x-0090-bnx2x-Semantic-removal-and-beautification.patch
+	patches.drivers/bnx2x-0091-bnx2x-Revise-prints.patch
 
 	########################################################
 	# Wireless Networking
