--- a/series.conf
+++ b/series.conf
@@ -17057,6 +17057,7 @@
 	patches.drivers/bnx2x-0153-bnx2x-Fix-Coalescing-configuration.patch
 	patches.drivers/bnx2x-0154-bnx2x-Fix-config-when-SR-IOV-and-iSCSI-are-enabled.patch
 	patches.drivers/bnx2x-0155-bnx2x-Prevent-null-pointer-dereference-on-error-flow.patch
+	patches.drivers/bnx2x-0156-bnx2x-Lock-DMAE-when-used-by-statistic-flow.patch
 
 	########################################################
 	# Wireless Networking
