--- a/series.conf
+++ b/series.conf
@@ -17029,6 +17029,7 @@
 	patches.drivers/bnx2x-0125-bnx2x-Restore-a-call-to-config_init.patch
 	patches.drivers/bnx2x-0126-bnx2x-Fix-configuration-of-doorbell-block.patch
 	patches.drivers/bnx2x-0127-bnx2x-Use-pci_dev-pm_cap.patch
+	patches.drivers/bnx2x-0128-net-bnx2x-Staticize-local-symbols.patch
 
 	########################################################
 	# Wireless Networking
