--- a/series.conf
+++ b/series.conf
@@ -16918,6 +16918,7 @@
 	patches.drivers/bnx2x-0014-bnx2x-Support-of-PF-driver-of-a-VF-init-request.patch
 	patches.drivers/bnx2x-0015-bnx2x-Support-statistics-collection-for-VFs-by-the-P.patch
 	patches.drivers/bnx2x-0016-bnx2x-Support-of-PF-driver-of-a-VF-setup_q-request.patch
+	patches.drivers/bnx2x-0017-bnx2x-Support-of-PF-driver-of-a-VF-q_filters-request.patch
 
 	########################################################
 	# Wireless Networking
