bnx2x: Change DCB context handling (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17012,6 +17012,7 @@
 	patches.drivers/bnx2x-0108-bnx2x-fix-PTE-write-access-error.patch
 	patches.drivers/bnx2x-0109-bnx2x-prevent-crash-in-shutdown-flow-with-CNIC.patch
 	patches.drivers/bnx2x-0110-bnx2x-dropless-flow-control-not-always-functional.patch
+	patches.drivers/bnx2x-0111-bnx2x-Change-DCB-context-handling.patch
 
 	########################################################
 	# Wireless Networking
