bnx2x: allow nvram test to run when device is down (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16968,6 +16968,7 @@
 	patches.drivers/bnx2x-0064-bnx2x-fix-byte-by-byte-nvram-write-for-BE-machines.patch
 	patches.drivers/bnx2x-0065-bnx2x-remove-non-necessary-assignment.patch
 	patches.drivers/bnx2x-0066-bnx2x-add-additional-regions-for-CRC-memory-test.patch
+	patches.drivers/bnx2x-0067-bnx2x-allow-nvram-test-to-run-when-device-is-down.patch
 
 	########################################################
 	# Wireless Networking
