bnx2x: prevent masked MCP parities from appearing (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17040,6 +17040,7 @@
 	patches.drivers/bnx2x-0136-bnx2x-Fix-support-for-VFs-on-some-PFs.patch
 	patches.drivers/bnx2x-0137-bnx2x-add-missing-VF-resource-allocation-during-init.patch
 	patches.drivers/bnx2x-0138-bnx2x-prevent-masking-error-from-cnic.patch
+	patches.drivers/bnx2x-0139-bnx2x-prevent-masked-MCP-parities-from-appearing.patch
 
 	########################################################
 	# Wireless Networking
