--- a/series.conf
+++ b/series.conf
@@ -17065,6 +17065,7 @@
 	patches.drivers/bnx2x-0161-bnx2x-Clean-the-sp-rtnl-task-upon-unload.patch
 	patches.drivers/bnx2x-0162-bnx2x-Prevent-panic-during-DMAE-timeout.patch
 	patches.drivers/bnx2x-0163-bnx2x-prevent-CFC-attention.patch
+	patches.drivers/bnx2x-0164-bnx2x-Prevent-timeout-waiting-for-state-X.patch
 
 	########################################################
 	# Wireless Networking
