--- a/series.conf
+++ b/series.conf
@@ -17090,6 +17090,7 @@
 	patches.drivers/bnx2x-0186-bnx2x-Correct-default-Tx-switching-behaviour.patch
 	patches.drivers/bnx2x-0187-bnx2x-fix-sparse-warning.patch
 	patches.drivers/bnx2x-0188-bnx2x-Don-t-release-PCI-bars-on-shutdown.patch
+	patches.drivers/bnx2x-0189-bnx2x-Fix-VF-flr-flow.patch
 
 	########################################################
 	# Wireless Networking
