--- a/series.conf
+++ b/series.conf
@@ -17125,6 +17125,7 @@
 	patches.drivers/bnx2x-0221-bnx2x-Fix-the-MSI-flags.patch
 	patches.drivers/bnx2x-0222-bnx2x-fix-set_setting-for-some-PHYs.patch
 	patches.drivers/bnx2x-0223-net-ethernet-broadcom-bnx2x-Remove-redundant-ifdef.patch
+	patches.drivers/bnx2x-0224-bnx2x-Utilize-FW-7.10.51.patch
 
 	########################################################
 	# Wireless Networking
