--- a/series.conf
+++ b/series.conf
@@ -16905,6 +16905,7 @@
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
 	patches.drivers/bnx2x-0002-bnx2x-Support-probing-and-removing-of-VF-device.patch
 	patches.drivers/bnx2x-0003-bnx2x-VF-PF-channel-acquire-at-vf-probe.patch
+	patches.drivers/bnx2x-0004-bnx2x-Add-to-VF-PF-channel-the-release-request.patch
 
 	########################################################
 	# Wireless Networking
