bnx2x: fill in sane dump flag information (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17004,6 +17004,7 @@
 	patches.drivers/bnx2x-0100-bnx2x-Remove-sparse-and-coccinelle-warnings.patch
 	patches.drivers/bnx2x-0101-bnx2x-remove-zeroing-of-dump-data-buffer.patch
 	patches.drivers/bnx2x-0102-bnx2x-fix-dump-flag-handling.patch
+	patches.drivers/bnx2x-0103-bnx2x-fill-in-sane-dump-flag-information.patch
 
 	########################################################
 	# Wireless Networking
