--- a/series.conf
+++ b/series.conf
@@ -17031,6 +17031,7 @@
 	patches.drivers/bnx2x-0127-bnx2x-Use-pci_dev-pm_cap.patch
 	patches.drivers/bnx2x-0128-net-bnx2x-Staticize-local-symbols.patch
 	patches.drivers/bnx2x-0129-DMA-API-net-broadcom-bnx2x-replace-dma_set_mask-dma_.patch
+	patches.drivers/bnx2x-0130-bnx2x-Generalize-KR-work-around.patch
 
 	########################################################
 	# Wireless Networking
