bnx2x: Prevent pci_disable_sriov with assigned VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17131,6 +17131,7 @@
 	patches.drivers/bnx2x-0227-bnx2x-Update-driver-version-to-1.710.51.patch
 	patches.drivers/bnx2x-0228-bnx2x-Safe-bnx2x_panic_dump.patch
 	patches.drivers/bnx2x-0229-bnx2x-Prevent-IOV-if-no-entries-in-CAM.patch
+	patches.drivers/bnx2x-0230-bnx2x-Prevent-pci_disable_sriov-with-assigned-VFs.patch
 
 	########################################################
 	# Wireless Networking
