bnx2x: Segregate SR-IOV code (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16925,6 +16925,7 @@
 	patches.drivers/bnx2x-0021-bnx2x-Support-VF-FLR.patch
 	patches.drivers/bnx2x-0022-bnx2x-Support-PF-VF-Bulletin-Board.patch
 	patches.drivers/bnx2x-0023-bnx2x-Add-VF-device-ids-and-enable-feature.patch
+	patches.drivers/bnx2x-0024-bnx2x-Segregate-SR-IOV-code.patch
 
 	########################################################
 	# Wireless Networking
