bnx2x: FW assertion changes (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17133,6 +17133,7 @@
 	patches.drivers/bnx2x-0229-bnx2x-Prevent-IOV-if-no-entries-in-CAM.patch
 	patches.drivers/bnx2x-0230-bnx2x-Prevent-pci_disable_sriov-with-assigned-VFs.patch
 	patches.drivers/bnx2x-0231-bnx2x-Make-BP_VF-more-robust.patch
+	patches.drivers/bnx2x-0232-bnx2x-FW-assertion-changes.patch
 
 	########################################################
 	# Wireless Networking
