--- a/series.conf
+++ b/series.conf
@@ -16930,6 +16930,7 @@
 	patches.drivers/bnx2x-0026-bnx2x-align-define-usage-to-satisfy-static-checkers.patch
 	patches.drivers/bnx2x-0027-bnx2x-move-debugging-code-before-the-return.patch
 	patches.drivers/bnx2x-0028-bnx2x-add-ethtool-w-support.patch
+	patches.drivers/bnx2x-0029-bnx2x-improve-stop-on-error.patch
 
 	########################################################
 	# Wireless Networking
