--- a/series.conf
+++ b/series.conf
@@ -17005,6 +17005,7 @@
 	patches.drivers/bnx2x-0101-bnx2x-remove-zeroing-of-dump-data-buffer.patch
 	patches.drivers/bnx2x-0102-bnx2x-fix-dump-flag-handling.patch
 	patches.drivers/bnx2x-0103-bnx2x-fill-in-sane-dump-flag-information.patch
+	patches.drivers/bnx2x-0104-bnx2x-Revising-locking-scheme-for-MAC-configuration.patch
 
 	########################################################
 	# Wireless Networking
