bnx2x: add `ethtool -w' support (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16929,6 +16929,7 @@
 	patches.drivers/bnx2x-0025-bnx2x-NULL-dereference-on-error-in-debug-code.patch
 	patches.drivers/bnx2x-0026-bnx2x-align-define-usage-to-satisfy-static-checkers.patch
 	patches.drivers/bnx2x-0027-bnx2x-move-debugging-code-before-the-return.patch
+	patches.drivers/bnx2x-0028-bnx2x-add-ethtool-w-support.patch
 
 	########################################################
 	# Wireless Networking
