--- a/series.conf
+++ b/series.conf
@@ -17080,6 +17080,7 @@
 	patches.drivers/bnx2x-0176-bnx2x-Fix-Duplex-setting-for-54618se.patch
 	patches.drivers/bnx2x-0177-bnx2x-Fix-incorrect-link-up-report.patch
 	patches.drivers/bnx2x-0178-bnx2x-Fix-KR2-work-around-detection-of-BCM8073.patch
+	patches.drivers/bnx2x-0179-bnx2x-limit-number-of-interrupt-vectors-for-57711.patch
 
 	########################################################
 	# Wireless Networking
