bnx2x: Fix KR2 work-around detection of BCM8073 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17079,6 +17079,7 @@
 	patches.drivers/bnx2x-0175-bnx2x-Fix-passive-DAC-cable-detection.patch
 	patches.drivers/bnx2x-0176-bnx2x-Fix-Duplex-setting-for-54618se.patch
 	patches.drivers/bnx2x-0177-bnx2x-Fix-incorrect-link-up-report.patch
+	patches.drivers/bnx2x-0178-bnx2x-Fix-KR2-work-around-detection-of-BCM8073.patch
 
 	########################################################
 	# Wireless Networking
