--- a/series.conf
+++ b/series.conf
@@ -17132,6 +17132,7 @@
 	patches.drivers/bnx2x-0228-bnx2x-Safe-bnx2x_panic_dump.patch
 	patches.drivers/bnx2x-0229-bnx2x-Prevent-IOV-if-no-entries-in-CAM.patch
 	patches.drivers/bnx2x-0230-bnx2x-Prevent-pci_disable_sriov-with-assigned-VFs.patch
+	patches.drivers/bnx2x-0231-bnx2x-Make-BP_VF-more-robust.patch
 
 	########################################################
 	# Wireless Networking
