bnx2x: Unlock VF-PF channel on MAC/VLAN config error (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17053,6 +17053,7 @@
 	patches.drivers/bnx2x-0149-net-bnx2x-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/bnx2x-0150-bnx2x-Fix-Maximum-CoS-estimation-for-VFs.patch
 	patches.drivers/bnx2x-0151-bnx2x-Prevent-an-illegal-pointer-dereference-during-.patch
+	patches.drivers/bnx2x-0152-bnx2x-Unlock-VF-PF-channel-on-MAC-VLAN-config-error.patch
 
 	########################################################
 	# Wireless Networking
