bnx2x: fix UDP checksum for 57710/57711 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16943,6 +16943,7 @@
 	patches.drivers/bnx2x-0039-bnx2x-SR-IOV-version-compatibility-bugfix.patch
 	patches.drivers/bnx2x-0040-bnx2x-Force-link-UP-when-the-interface-is-in-LOOPBAC.patch
 	patches.drivers/bnx2x-0041-bnx2x-remove-dead-code-and-make-local-funcs-static.patch
+	patches.drivers/bnx2x-0042-bnx2x-fix-UDP-checksum-for-57710-57711.patch
 
 	########################################################
 	# Wireless Networking
