bnx2x: AER revised (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16953,6 +16953,7 @@
 	patches.drivers/bnx2x-0049-bnx2x-add-missing-napi-deletion-in-error-path.patch
 	patches.drivers/bnx2x-0050-bnx2x-add-RSS-capability-for-GRE-traffic.patch
 	patches.drivers/bnx2x-0051-bnx2x-fix-occasional-statistics-off-by-4GB-error.patch
+	patches.drivers/bnx2x-0052-bnx2x-AER-revised.patch
 
 	########################################################
 	# Wireless Networking
