bnx2x: More Shutdown revisions (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17091,6 +17091,7 @@
 	patches.drivers/bnx2x-0187-bnx2x-fix-sparse-warning.patch
 	patches.drivers/bnx2x-0188-bnx2x-Don-t-release-PCI-bars-on-shutdown.patch
 	patches.drivers/bnx2x-0189-bnx2x-Fix-VF-flr-flow.patch
+	patches.drivers/bnx2x-0190-bnx2x-More-Shutdown-revisions.patch
 
 	########################################################
 	# Wireless Networking
