--- a/series.conf
+++ b/series.conf
@@ -17043,6 +17043,7 @@
 	patches.drivers/bnx2x-0139-bnx2x-prevent-masked-MCP-parities-from-appearing.patch
 	patches.drivers/bnx2x-0140-bnx2x-handle-known-but-unsupported-VF-messages.patch
 	patches.drivers/bnx2x-0141-bnx2x-Test-nvram-when-interface-is-down.patch
+	patches.drivers/bnx2x-0142-bnx2x-Correct-VF-driver-info.patch
 
 	########################################################
 	# Wireless Networking
