--- a/series.conf
+++ b/series.conf
@@ -17136,6 +17136,7 @@
 	patches.drivers/bnx2x-0232-bnx2x-FW-assertion-changes.patch
 	patches.drivers/bnx2x-0233-bnx2x-ethtool-d-might-cause-timeout-in-log.patch
 	patches.drivers/bnx2x-0234-bnx2x-Fix-stop-on-error.patch
+	patches.drivers/bnx2x-0235-bnx2x-VF-clean-statistics.patch
 
 	########################################################
 	# Wireless Networking
