bnx2x: Revise comments and alignment (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16990,6 +16990,7 @@
 	patches.drivers/bnx2x-0086-bnx2x-Count-number-of-possible-FCoE-interfaces.patch
 	patches.drivers/bnx2x-0087-bnx2x-Implement-PCI-shutdown.patch
 	patches.drivers/bnx2x-0088-bnx2x-Semantic-change-of-empty-lines.patch
+	patches.drivers/bnx2x-0089-bnx2x-Revise-comments-and-alignment.patch
 
 	########################################################
 	# Wireless Networking
