bnx2x: fix VLAN configuration for VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17084,6 +17084,7 @@
 	patches.drivers/bnx2x-0180-bnx2x-Correct-number-of-MSI-X-vectors-for-VFs.patch
 	patches.drivers/bnx2x-0181-bnx2x-Clean-before-update-RSS-arrives.patch
 	patches.drivers/bnx2x-0182-bnx2x-fix-AFEX-memory-overflow.patch
+	patches.drivers/bnx2x-0183-bnx2x-fix-VLAN-configuration-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
