bnx2x: fix byte-by-byte nvram write for BE machines (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16965,6 +16965,7 @@
 	patches.drivers/bnx2x-0061-bnx2x-Prevent-UNDI-FW-illegal-host-access.patch
 	patches.drivers/bnx2x-0062-bnx2x-Fix-status-blocks-configuration.patch
 	patches.drivers/bnx2x-0063-bnx2x-refactor-nvram-read-procedure.patch
+	patches.drivers/bnx2x-0064-bnx2x-fix-byte-by-byte-nvram-write-for-BE-machines.patch
 
 	########################################################
 	# Wireless Networking
