--- a/series.conf
+++ b/series.conf
@@ -17039,6 +17039,7 @@
 	patches.drivers/bnx2x-0135-bnx2x-Prevent-mistaken-hangup-between-driver-FW.patch
 	patches.drivers/bnx2x-0136-bnx2x-Fix-support-for-VFs-on-some-PFs.patch
 	patches.drivers/bnx2x-0137-bnx2x-add-missing-VF-resource-allocation-during-init.patch
+	patches.drivers/bnx2x-0138-bnx2x-prevent-masking-error-from-cnic.patch
 
 	########################################################
 	# Wireless Networking
