--- a/series.conf
+++ b/series.conf
@@ -16991,6 +16991,7 @@
 	patches.drivers/bnx2x-0087-bnx2x-Implement-PCI-shutdown.patch
 	patches.drivers/bnx2x-0088-bnx2x-Semantic-change-of-empty-lines.patch
 	patches.drivers/bnx2x-0089-bnx2x-Revise-comments-and-alignment.patch
+	patches.drivers/bnx2x-0090-bnx2x-Semantic-removal-and-beautification.patch
 
 	########################################################
 	# Wireless Networking
