--- a/series.conf
+++ b/series.conf
@@ -17093,6 +17093,7 @@
 	patches.drivers/bnx2x-0189-bnx2x-Fix-VF-flr-flow.patch
 	patches.drivers/bnx2x-0190-bnx2x-More-Shutdown-revisions.patch
 	patches.drivers/bnx2x-0191-bnx2x-Fix-generic-option-settings.patch
+	patches.drivers/bnx2x-0192-bnx2x-fix-L2-GRE-TCP-issues.patch
 
 	########################################################
 	# Wireless Networking
