bnx2x: Fix functionality of configuring vlan list (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17019,6 +17019,7 @@
 	patches.drivers/bnx2x-0115-bnx2x-set-VF-DMAE-when-first-function-has-0-supporte.patch
 	patches.drivers/bnx2x-0116-bnx2x-vf-mark-stats-started.patch
 	patches.drivers/bnx2x-0117-bnx2x-Fix-move-FP-memory-deallocations.patch
+	patches.drivers/bnx2x-0118-bnx2x-Fix-functionality-of-configuring-vlan-list.patch
 
 	########################################################
 	# Wireless Networking
