bnx2x: update version to 1.78.17-0 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16969,6 +16969,7 @@
 	patches.drivers/bnx2x-0065-bnx2x-remove-non-necessary-assignment.patch
 	patches.drivers/bnx2x-0066-bnx2x-add-additional-regions-for-CRC-memory-test.patch
 	patches.drivers/bnx2x-0067-bnx2x-allow-nvram-test-to-run-when-device-is-down.patch
+	patches.drivers/bnx2x-0068-bnx2x-update-version-to-1.78.17-0.patch
 
 	########################################################
 	# Wireless Networking
