--- a/series.conf
+++ b/series.conf
@@ -17122,6 +17122,7 @@
 	patches.drivers/bnx2x-0218-bnx2x-Fix-link-for-KR-with-swapped-polarity-lane.patch
 	patches.drivers/bnx2x-0219-bnx2x-Fix-1G-baseT-link.patch
 	patches.drivers/bnx2x-0220-bnx2x-Enlarge-the-dorq-threshold-for-VFs.patch
+	patches.drivers/bnx2x-0221-bnx2x-Fix-the-MSI-flags.patch
 
 	########################################################
 	# Wireless Networking
