bnx2x: NULL dereference on error in debug code (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16926,6 +16926,7 @@
 	patches.drivers/bnx2x-0022-bnx2x-Support-PF-VF-Bulletin-Board.patch
 	patches.drivers/bnx2x-0023-bnx2x-Add-VF-device-ids-and-enable-feature.patch
 	patches.drivers/bnx2x-0024-bnx2x-Segregate-SR-IOV-code.patch
+	patches.drivers/bnx2x-0025-bnx2x-NULL-dereference-on-error-in-debug-code.patch
 
 	########################################################
 	# Wireless Networking
