bnx2x: Safe bnx2x_panic_dump() (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17129,6 +17129,7 @@
 	patches.drivers/bnx2x-0225-bnx2x-Add-timestamping-and-PTP-hardware-clock-suppor.patch
 	patches.drivers/bnx2x-0226-bnx2x-Code-cleanup.patch
 	patches.drivers/bnx2x-0227-bnx2x-Update-driver-version-to-1.710.51.patch
+	patches.drivers/bnx2x-0228-bnx2x-Safe-bnx2x_panic_dump.patch
 
 	########################################################
 	# Wireless Networking
