bnx2x: Add support in PF driver for RSC (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17100,6 +17100,7 @@
 	patches.drivers/bnx2x-0196-bnx2x-Remove-unused-iov-code.patch
 	patches.drivers/bnx2x-0197-bnx2x-Remove-unnecessary-internal-mem-config.patch
 	patches.drivers/bnx2x-0198-bnx2x-Semantic-Validate-vlan-mac-changes.patch
+	patches.drivers/bnx2x-0199-bnx2x-Add-support-in-PF-driver-for-RSC.patch
 
 	########################################################
 	# Wireless Networking
