bnx2x: Improve PF behaviour toward VF (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16996,6 +16996,7 @@
 	patches.drivers/bnx2x-0092-bnx2x-semi-Semantic-changes.patch
 	patches.drivers/bnx2x-0093-bnx2x-fix-a-power-state-test.patch
 	patches.drivers/bnx2x-0094-Bnx2x-remove-redundant-D0-power-state-set.patch
+	patches.drivers/bnx2x-0095-bnx2x-Improve-PF-behaviour-toward-VF.patch
 
 	########################################################
 	# Wireless Networking
