bnx2x: prevent incorrect byte-swap in BE (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17141,6 +17141,7 @@
 	patches.drivers/bnx2x-0237-bnx2x-Fix-timesync-endianity.patch
 	patches.drivers/bnx2x-0238-bnx2x-Fix-static-checker-warning-regarding-txdata_pt.patch
 	patches.drivers/bnx2x-0239-bnx2x-Fix-sparse-warnings.patch
+	patches.drivers/bnx2x-0240-bnx2x-prevent-incorrect-byte-swap-in-BE.patch
 
 	########################################################
 	# Wireless Networking
