--- a/series.conf
+++ b/series.conf
@@ -17002,6 +17002,7 @@
 	patches.drivers/bnx2x-0098-bnx2x-Fix-20G-KR2-support-claims.patch
 	patches.drivers/bnx2x-0099-bnx2x-Fix-compilation-with-no-IOV-support.patch
 	patches.drivers/bnx2x-0100-bnx2x-Remove-sparse-and-coccinelle-warnings.patch
+	patches.drivers/bnx2x-0101-bnx2x-remove-zeroing-of-dump-data-buffer.patch
 
 	########################################################
 	# Wireless Networking
