bnx2x: VF RSS support - PF side (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17022,6 +17022,7 @@
 	patches.drivers/bnx2x-0118-bnx2x-Fix-functionality-of-configuring-vlan-list.patch
 	patches.drivers/bnx2x-0119-bnx2x-Fix-VF-memory-leak-unload.patch
 	patches.drivers/bnx2x-0120-bnx2x-Fix-VF-stats-sync.patch
+	patches.drivers/bnx2x-0121-bnx2x-VF-RSS-support-PF-side.patch
 
 	########################################################
 	# Wireless Networking
