bnx2x: Infrastructure for VF <-> PF request on PF side (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16913,6 +16913,7 @@
 	patches.drivers/bnx2x-0009-bnx2x-VF-fastpath.patch
 	patches.drivers/bnx2x-0010-bnx2x-Allocate-VF-database-in-PF-when-VFs-are-presen.patch
 	patches.drivers/bnx2x-0011-bnx2x-Prepare-device-and-initialize-VF-database.patch
+	patches.drivers/bnx2x-0012-bnx2x-Infrastructure-for-VF-PF-request-on-PF-side.patch
 
 	########################################################
 	# Wireless Networking
