bnx2x: remove __dev* attributes (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16901,6 +16901,9 @@
 	patches.drivers/mlx4-0295-net-mlx4_core-Call-synchronize_irq-before-freeing-EQ.patch
 	patches.drivers/mlx4-0296-net-mlx4_core-Limit-count-field-to-24-bits-in-qp_all.patch
 
+	# bnx2x SP4 update (bsc#908684 FATE#317539)
+	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
