--- a/series.conf
+++ b/series.conf
@@ -17044,6 +17044,7 @@
 	patches.drivers/bnx2x-0140-bnx2x-handle-known-but-unsupported-VF-messages.patch
 	patches.drivers/bnx2x-0141-bnx2x-Test-nvram-when-interface-is-down.patch
 	patches.drivers/bnx2x-0142-bnx2x-Correct-VF-driver-info.patch
+	patches.drivers/bnx2x-0143-bnx2x-Don-t-disable-enable-SR-IOV-when-loading.patch
 
 	########################################################
 	# Wireless Networking
