bnx2x: Use pci_dev pm_cap (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17028,6 +17028,7 @@
 	patches.drivers/bnx2x-0124-bnx2x-fix-broken-compilation-with-CONFIG_BNX2X_SRIOV.patch
 	patches.drivers/bnx2x-0125-bnx2x-Restore-a-call-to-config_init.patch
 	patches.drivers/bnx2x-0126-bnx2x-Fix-configuration-of-doorbell-block.patch
+	patches.drivers/bnx2x-0127-bnx2x-Use-pci_dev-pm_cap.patch
 
 	########################################################
 	# Wireless Networking
