bnx2x: fix memory leak in VF (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17008,6 +17008,7 @@
 	patches.drivers/bnx2x-0104-bnx2x-Revising-locking-scheme-for-MAC-configuration.patch
 	patches.drivers/bnx2x-0105-bnx2x-clean-up-unnecessary-MSI-MSI-X-capability-find.patch
 	patches.drivers/bnx2x-0106-bnx2x-update-fairness-parameters-following-DCB-negot.patch
+	patches.drivers/bnx2x-0107-bnx2x-fix-memory-leak-in-VF.patch
 
 	########################################################
 	# Wireless Networking
