bnx2x: fix broken compilation with CONFIG_BNX2X_SRIOV is not set (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17025,6 +17025,7 @@
 	patches.drivers/bnx2x-0121-bnx2x-VF-RSS-support-PF-side.patch
 	patches.drivers/bnx2x-0122-bnx2x-VF-RSS-support-VF-side.patch
 	patches.drivers/bnx2x-0123-bnx2x-Add-missing-braces-in-bnx2x-bnx2x_link_initial.patch
+	patches.drivers/bnx2x-0124-bnx2x-fix-broken-compilation-with-CONFIG_BNX2X_SRIOV.patch
 
 	########################################################
 	# Wireless Networking
