bnx2[x]: Make module parameters readable (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17094,6 +17094,7 @@
 	patches.drivers/bnx2x-0190-bnx2x-More-Shutdown-revisions.patch
 	patches.drivers/bnx2x-0191-bnx2x-Fix-generic-option-settings.patch
 	patches.drivers/bnx2x-0192-bnx2x-fix-L2-GRE-TCP-issues.patch
+	patches.drivers/bnx2x-0193-bnx2-x-Make-module-parameters-readable.patch
 
 	########################################################
 	# Wireless Networking
