bnx2x: vf mark stats started (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17017,6 +17017,7 @@
 	patches.drivers/bnx2x-0113-bnx2x-prevent-VF-benign-attentions.patch
 	patches.drivers/bnx2x-0114-bnx2x-Protect-against-VFs-ndos-when-SR-IOV-is-disabl.patch
 	patches.drivers/bnx2x-0115-bnx2x-set-VF-DMAE-when-first-function-has-0-supporte.patch
+	patches.drivers/bnx2x-0116-bnx2x-vf-mark-stats-started.patch
 
 	########################################################
 	# Wireless Networking
