--- a/series.conf
+++ b/series.conf
@@ -16924,6 +16924,7 @@
 	patches.drivers/bnx2x-0020-bnx2x-Support-of-PF-driver-of-a-VF-release-request.patch
 	patches.drivers/bnx2x-0021-bnx2x-Support-VF-FLR.patch
 	patches.drivers/bnx2x-0022-bnx2x-Support-PF-VF-Bulletin-Board.patch
+	patches.drivers/bnx2x-0023-bnx2x-Add-VF-device-ids-and-enable-feature.patch
 
 	########################################################
 	# Wireless Networking
