--- a/series.conf
+++ b/series.conf
@@ -17130,6 +17130,7 @@
 	patches.drivers/bnx2x-0226-bnx2x-Code-cleanup.patch
 	patches.drivers/bnx2x-0227-bnx2x-Update-driver-version-to-1.710.51.patch
 	patches.drivers/bnx2x-0228-bnx2x-Safe-bnx2x_panic_dump.patch
+	patches.drivers/bnx2x-0229-bnx2x-Prevent-IOV-if-no-entries-in-CAM.patch
 
 	########################################################
 	# Wireless Networking
