--- a/series.conf
+++ b/series.conf
@@ -17011,6 +17011,7 @@
 	patches.drivers/bnx2x-0107-bnx2x-fix-memory-leak-in-VF.patch
 	patches.drivers/bnx2x-0108-bnx2x-fix-PTE-write-access-error.patch
 	patches.drivers/bnx2x-0109-bnx2x-prevent-crash-in-shutdown-flow-with-CNIC.patch
+	patches.drivers/bnx2x-0110-bnx2x-dropless-flow-control-not-always-functional.patch
 
 	########################################################
 	# Wireless Networking
