bnx2x: Fix 20G KR2 support claims (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16999,6 +16999,7 @@
 	patches.drivers/bnx2x-0095-bnx2x-Improve-PF-behaviour-toward-VF.patch
 	patches.drivers/bnx2x-0096-bnx2x-VF-ndo-sanity.patch
 	patches.drivers/bnx2x-0097-bnx2x-improve-VF-timings.patch
+	patches.drivers/bnx2x-0098-bnx2x-Fix-20G-KR2-support-claims.patch
 
 	########################################################
 	# Wireless Networking
