--- a/series.conf
+++ b/series.conf
@@ -17015,6 +17015,7 @@
 	patches.drivers/bnx2x-0111-bnx2x-Change-DCB-context-handling.patch
 	patches.drivers/bnx2x-0112-bnx2x-Consider-DCBX-remote-error.patch
 	patches.drivers/bnx2x-0113-bnx2x-prevent-VF-benign-attentions.patch
+	patches.drivers/bnx2x-0114-bnx2x-Protect-against-VFs-ndos-when-SR-IOV-is-disabl.patch
 
 	########################################################
 	# Wireless Networking
