bnx2x: Support ndo_set_rxmode in VF driver (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16909,6 +16909,7 @@
 	patches.drivers/bnx2x-0005-bnx2x-Separate-VF-and-PF-logic.patch
 	patches.drivers/bnx2x-0006-bnx2x-Add-init-setup_q-set_mac-to-VF-PF-channel.patch
 	patches.drivers/bnx2x-0007-bnx2x-Add-teardown_q-and-close-to-VF-PF-channel.patch
+	patches.drivers/bnx2x-0008-bnx2x-Support-ndo_set_rxmode-in-VF-driver.patch
 
 	########################################################
 	# Wireless Networking
