--- a/series.conf
+++ b/series.conf
@@ -16945,6 +16945,7 @@
 	patches.drivers/bnx2x-0041-bnx2x-remove-dead-code-and-make-local-funcs-static.patch
 	patches.drivers/bnx2x-0042-bnx2x-fix-UDP-checksum-for-57710-57711.patch
 	patches.drivers/bnx2x-0043-bnx2x-use-the-default-NAPI-weight.patch
+	patches.drivers/bnx2x-0044-bnx2x-Fix-SFP-misconfiguration-in-iSCSI-boot-scenari.patch
 
 	########################################################
 	# Wireless Networking
