--- a/series.conf
+++ b/series.conf
@@ -16957,6 +16957,7 @@
 	patches.drivers/bnx2x-0053-bnx2x-fix-assignment-of-signed-expression-to-unsigne.patch
 	patches.drivers/bnx2x-0054-bnx2x-Fix-AER-semaphore-release.patch
 	patches.drivers/bnx2x-0055-bnx2x-missing-ARI-should-not-be-lethal.patch
+	patches.drivers/bnx2x-0056-bnx2x-Fix-VF-statistics.patch
 
 	########################################################
 	# Wireless Networking
