--- a/series.conf
+++ b/series.conf
@@ -16934,6 +16934,7 @@
 	patches.drivers/bnx2x-0030-bnx2x-Introduce-2013-and-advance-version-to-1.78.02.patch
 	patches.drivers/bnx2x-0031-bnx2x-Semantic-renovation.patch
 	patches.drivers/bnx2x-0032-bnx2x-reorganization-and-beautification.patch
+	patches.drivers/bnx2x-0033-bnx2x-correct-usleep_range-usage.patch
 
 	########################################################
 	# Wireless Networking
