bnx2x: Add additional debug information (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16935,6 +16935,7 @@
 	patches.drivers/bnx2x-0031-bnx2x-Semantic-renovation.patch
 	patches.drivers/bnx2x-0032-bnx2x-reorganization-and-beautification.patch
 	patches.drivers/bnx2x-0033-bnx2x-correct-usleep_range-usage.patch
+	patches.drivers/bnx2x-0034-bnx2x-Add-additional-debug-information.patch
 
 	########################################################
 	# Wireless Networking
