bnx2x: save RAM in kdump kernel by disabling TPA (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17108,6 +17108,7 @@
 	patches.drivers/bnx2x-0204-bnx2x-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/bnx2x-0205-bnx2x-clamp-num_queues-to-prevent-passing-a-negative.patch
 	patches.drivers/bnx2x-0206-bnx2x-save-RAM-in-kdump-kernel-by-using-a-single-que.patch
+	patches.drivers/bnx2x-0207-bnx2x-save-RAM-in-kdump-kernel-by-disabling-TPA.patch
 
 	########################################################
 	# Wireless Networking
