--- a/series.conf
+++ b/series.conf
@@ -17052,6 +17052,7 @@
 	patches.drivers/bnx2x-0148-bnx2x-record-rx-queue-for-LRO-packets.patch
 	patches.drivers/bnx2x-0149-net-bnx2x-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/bnx2x-0150-bnx2x-Fix-Maximum-CoS-estimation-for-VFs.patch
+	patches.drivers/bnx2x-0151-bnx2x-Prevent-an-illegal-pointer-dereference-during-.patch
 
 	########################################################
 	# Wireless Networking
