bnx2x: Count number of possible FCoE interfaces (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16987,6 +16987,7 @@
 	patches.drivers/bnx2x-0083-bnx2x-Add-and-correct-PCI-link-speed-prints.patch
 	patches.drivers/bnx2x-0084-bnx2x-Ack-unknown-VF-messages.patch
 	patches.drivers/bnx2x-0085-bnx2x-bnx2fc-Use-per-port-max-exchange-resources.patch
+	patches.drivers/bnx2x-0086-bnx2x-Count-number-of-possible-FCoE-interfaces.patch
 
 	########################################################
 	# Wireless Networking
