bnx2x: Prevent VF race (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16959,6 +16959,7 @@
 	patches.drivers/bnx2x-0055-bnx2x-missing-ARI-should-not-be-lethal.patch
 	patches.drivers/bnx2x-0056-bnx2x-Fix-VF-statistics.patch
 	patches.drivers/bnx2x-0057-bnx2x-Fix-VF-outer-vlan-removal.patch
+	patches.drivers/bnx2x-0058-bnx2x-Prevent-VF-race.patch
 
 	########################################################
 	# Wireless Networking
