bnx2x: Fix AER semaphore release (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16955,6 +16955,7 @@
 	patches.drivers/bnx2x-0051-bnx2x-fix-occasional-statistics-off-by-4GB-error.patch
 	patches.drivers/bnx2x-0052-bnx2x-AER-revised.patch
 	patches.drivers/bnx2x-0053-bnx2x-fix-assignment-of-signed-expression-to-unsigne.patch
+	patches.drivers/bnx2x-0054-bnx2x-Fix-AER-semaphore-release.patch
 
 	########################################################
 	# Wireless Networking
