bnx2x: Clean before update RSS arrives (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17082,6 +17082,7 @@
 	patches.drivers/bnx2x-0178-bnx2x-Fix-KR2-work-around-detection-of-BCM8073.patch
 	patches.drivers/bnx2x-0179-bnx2x-limit-number-of-interrupt-vectors-for-57711.patch
 	patches.drivers/bnx2x-0180-bnx2x-Correct-number-of-MSI-X-vectors-for-VFs.patch
+	patches.drivers/bnx2x-0181-bnx2x-Clean-before-update-RSS-arrives.patch
 
 	########################################################
 	# Wireless Networking
