--- a/series.conf
+++ b/series.conf
@@ -17023,6 +17023,7 @@
 	patches.drivers/bnx2x-0119-bnx2x-Fix-VF-memory-leak-unload.patch
 	patches.drivers/bnx2x-0120-bnx2x-Fix-VF-stats-sync.patch
 	patches.drivers/bnx2x-0121-bnx2x-VF-RSS-support-PF-side.patch
+	patches.drivers/bnx2x-0122-bnx2x-VF-RSS-support-VF-side.patch
 
 	########################################################
 	# Wireless Networking
