bnx2x: Fix Maximum CoS estimation for VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17051,6 +17051,7 @@
 	patches.drivers/bnx2x-0147-net-bnx2x-Change-variable-type-to-bool.patch
 	patches.drivers/bnx2x-0148-bnx2x-record-rx-queue-for-LRO-packets.patch
 	patches.drivers/bnx2x-0149-net-bnx2x-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/bnx2x-0150-bnx2x-Fix-Maximum-CoS-estimation-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
