bnx2x: Support of PF driver of a VF init request (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16915,6 +16915,7 @@
 	patches.drivers/bnx2x-0011-bnx2x-Prepare-device-and-initialize-VF-database.patch
 	patches.drivers/bnx2x-0012-bnx2x-Infrastructure-for-VF-PF-request-on-PF-side.patch
 	patches.drivers/bnx2x-0013-bnx2x-Support-of-PF-driver-of-a-VF-acquire-request.patch
+	patches.drivers/bnx2x-0014-bnx2x-Support-of-PF-driver-of-a-VF-init-request.patch
 
 	########################################################
 	# Wireless Networking
