--- a/series.conf
+++ b/series.conf
@@ -16952,6 +16952,7 @@
 	patches.drivers/bnx2x-0048-bnx2x-use-list_move-instead-of-list_del-list_add.patch
 	patches.drivers/bnx2x-0049-bnx2x-add-missing-napi-deletion-in-error-path.patch
 	patches.drivers/bnx2x-0050-bnx2x-add-RSS-capability-for-GRE-traffic.patch
+	patches.drivers/bnx2x-0051-bnx2x-fix-occasional-statistics-off-by-4GB-error.patch
 
 	########################################################
 	# Wireless Networking
