bnx2x: Fix incorrect link-up report (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17078,6 +17078,7 @@
 	patches.drivers/bnx2x-0174-bnx2x-Fix-578xx-KR-1G-link.patch
 	patches.drivers/bnx2x-0175-bnx2x-Fix-passive-DAC-cable-detection.patch
 	patches.drivers/bnx2x-0176-bnx2x-Fix-Duplex-setting-for-54618se.patch
+	patches.drivers/bnx2x-0177-bnx2x-Fix-incorrect-link-up-report.patch
 
 	########################################################
 	# Wireless Networking
