net: ethernet: broadcom: bnx2x: Remove redundant #ifdef (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17124,6 +17124,7 @@
 	patches.drivers/bnx2x-0220-bnx2x-Enlarge-the-dorq-threshold-for-VFs.patch
 	patches.drivers/bnx2x-0221-bnx2x-Fix-the-MSI-flags.patch
 	patches.drivers/bnx2x-0222-bnx2x-fix-set_setting-for-some-PHYs.patch
+	patches.drivers/bnx2x-0223-net-ethernet-broadcom-bnx2x-Remove-redundant-ifdef.patch
 
 	########################################################
 	# Wireless Networking
