--- a/series.conf
+++ b/series.conf
@@ -16984,6 +16984,7 @@
 	patches.drivers/bnx2x-0080-bnx2x-Wait-for-MCP-validity-during-AER.patch
 	patches.drivers/bnx2x-0081-bnx2x-Enable-set_phys_id-for-all-functions.patch
 	patches.drivers/bnx2x-0082-bnx2x-Zero-VFs-starting-MACs.patch
+	patches.drivers/bnx2x-0083-bnx2x-Add-and-correct-PCI-link-speed-prints.patch
 
 	########################################################
 	# Wireless Networking
