bnx2x: Support mng. request for driver version (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17110,6 +17110,7 @@
 	patches.drivers/bnx2x-0206-bnx2x-save-RAM-in-kdump-kernel-by-using-a-single-que.patch
 	patches.drivers/bnx2x-0207-bnx2x-save-RAM-in-kdump-kernel-by-disabling-TPA.patch
 	patches.drivers/bnx2x-0208-bnx2x-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/bnx2x-0209-bnx2x-Support-mng.-request-for-driver-version.patch
 
 	########################################################
 	# Wireless Networking
