bnx2x: Don't show port statistics for VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17112,6 +17112,7 @@
 	patches.drivers/bnx2x-0208-bnx2x-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/bnx2x-0209-bnx2x-Support-mng.-request-for-driver-version.patch
 	patches.drivers/bnx2x-0210-bnx2x-Create-workqueue-for-IOV-related-tasks.patch
+	patches.drivers/bnx2x-0211-bnx2x-Don-t-show-port-statistics-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
