bnx2x: Add teardown_q and close to VF <-> PF channel (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16908,6 +16908,7 @@
 	patches.drivers/bnx2x-0004-bnx2x-Add-to-VF-PF-channel-the-release-request.patch
 	patches.drivers/bnx2x-0005-bnx2x-Separate-VF-and-PF-logic.patch
 	patches.drivers/bnx2x-0006-bnx2x-Add-init-setup_q-set_mac-to-VF-PF-channel.patch
+	patches.drivers/bnx2x-0007-bnx2x-Add-teardown_q-and-close-to-VF-PF-channel.patch
 
 	########################################################
 	# Wireless Networking
