bnx2x: Remove many sparse warnings (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16937,6 +16937,7 @@
 	patches.drivers/bnx2x-0033-bnx2x-correct-usleep_range-usage.patch
 	patches.drivers/bnx2x-0034-bnx2x-Add-additional-debug-information.patch
 	patches.drivers/bnx2x-0035-bnx2x-Add-missing-VFs-reference-in-macros.patch
+	patches.drivers/bnx2x-0036-bnx2x-Remove-many-sparse-warnings.patch
 
 	########################################################
 	# Wireless Networking
