--- a/series.conf
+++ b/series.conf
@@ -17074,6 +17074,7 @@
 	patches.drivers/bnx2x-0170-bnx2x-Add-num-of-VFs-to-Management-statistics.patch
 	patches.drivers/bnx2x-0171-bnx2x-add-VF-Multicast-filters-support.patch
 	patches.drivers/bnx2x-0172-bnx2x-Fix-build-with-SRIOV-disabled.patch
+	patches.drivers/bnx2x-0173-net-bnx2x-slight-optimization-of-addr-compare.patch
 
 	########################################################
 	# Wireless Networking
