bnx2x: semi-Semantic changes (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16993,6 +16993,7 @@
 	patches.drivers/bnx2x-0089-bnx2x-Revise-comments-and-alignment.patch
 	patches.drivers/bnx2x-0090-bnx2x-Semantic-removal-and-beautification.patch
 	patches.drivers/bnx2x-0091-bnx2x-Revise-prints.patch
+	patches.drivers/bnx2x-0092-bnx2x-semi-Semantic-changes.patch
 
 	########################################################
 	# Wireless Networking
