bnx2x: Fix link for KR with swapped polarity lane (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17119,6 +17119,7 @@
 	patches.drivers/bnx2x-0215-bnx2x-fix-build-when-BNX2X_SRIOV-is-not-enabled.patch
 	patches.drivers/bnx2x-0216-bnx2x-Convert-return-0-to-return-rc.patch
 	patches.drivers/bnx2x-0217-bnx2x-Remove-useless-return-variables.patch
+	patches.drivers/bnx2x-0218-bnx2x-Fix-link-for-KR-with-swapped-polarity-lane.patch
 
 	########################################################
 	# Wireless Networking
